Adicionando Hateoas na consulta de tabela de auditoria no projeto e implementando uma melhor maneira de retornar uma página